--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,21 +1,39 @@
 @charset "UTF-8";
 
-@import "normalize.css";
-
-@import "$styles/library/colors.css";
+@import "$styles/library/custom-media.css";
+@import "$styles/library/custom-selectors.css";
 @import "$styles/library/typography.css";
+@import "$styles/library/colors.css";
 @import "$styles/library/miscelaneous.css";
 
-html {
-	width: 100%;
-	height: 100%;
+@import "normalize.css";
 
-	color: var(--color-primary);
-	font-family: var(--font_serif);
-
-	background-color: var(--color-clairvoyant);
+:root {
+	--golden-ratio: 1.618;
 }
 
-main {
-	padding: 1em;
+* {
+	box-sizing: border-box;
+}
+
+html {
+	overflow: hidden;
+	scroll-behavior: smooth;
+}
+
+html,
+body {
+	width: 100vw;
+	height: 100%;
+}
+
+body {
+	overflow-x: hidden;
+	scrollbar-width: none;
+
+	&::-webkit-scrollbar {
+		width: 0px;
+
+		background-color: transparent;
+	}
 }
